--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ TODO.md
 supervisord.log
 supervisord.pid
 **/completions/*
-**/label-studio/alegreme/upload/*
+**/label-studio/**/upload/*
 
 .idea/
 .idea/alegreme.iml
