--- a/ml/label-studio/events/config.json
+++ b/ml/label-studio/events/config.json
@@ -18,7 +18,7 @@
   "ml_backends": [
     {
       "url": "http://localhost:9090/",
-      "name": "alegremee030"
+      "name": "event-category"
     }
   ],
   "task_page_auto_update_timer": 10000,
