--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -68,7 +68,7 @@ services:
     volumes:
       - api_data:/var/www/api/data
       - ./scrapy/data:/var/www/scrapy/data
-      # - ./ml/api:/var/www/ml/api:delegated
+      - ./ml/api:/var/www/ml/api
       # - ./logs/api:/var/www/ml/api/log:delegated
     environment:
       IS_DOCKER: 'true'
