--- a/web/Gemfile
+++ b/web/Gemfile
@@ -20,11 +20,9 @@ gem 'mini_racer', platforms: :ruby
 gem 'rake', '13.0.3'
 # gem "jsonb_accessor", "~> 1.1.0"
 
-# Calendar
-# gem "simple_calendar", "~> 2.0"
-
-# Materialize
-# gem 'materialize-sass', '~> 1.0.0'
+#Admin panel
+gem 'administrate'
+gem 'administrate-field-jsonb'
 
 gem 'friendly_id', '~> 5.2.4'
 
