--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "query-string": "^6.4.2",
     "resolve-url-loader": "^3.1.2",
     "simple-scrollbar": "^0.4.0",
+    "sticky-sidebar": "^3.3.1",
     "stimulus": "^2.0.0",
     "stimulus_reflex": "3.4.1",
     "tailwindcss": "^2.0.1-compat",
