Update to use ngrok instead of proxies

--- a/scrapy/Dockerfile
+++ b/scrapy/Dockerfile
@@ -16,7 +16,7 @@ RUN mkdir -p log
 
 COPY ./docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
-ENTRYPOINT ["/docker-entrypoint.sh"]
+ENTRYPOINT ["sh", "/docker-entrypoint.sh"]
 
 
 EXPOSE 7654
