Adjust in splash configs and scrapy setting

--- a/scrapy/docker-compose.yml
+++ b/scrapy/docker-compose.yml
@@ -27,6 +27,6 @@ services:
     restart: on-failure
     volumes:
       - splash_data:/var/www/splash/data
-    mem_limit: 2gb
+    mem_limit: 1gb
     mem_reservation: 256m
-    command: --maxrss 2048 --max-timeout 3600 --slots 4
+    command: --maxrss 1024 --max-timeout 3600
