--- a/web/config/meta.yml
+++ b/web/config/meta.yml
@@ -1,4 +1,4 @@
-meta_title: "Alegreme - Aproveite a cidade de Porto Alegre"
-meta_description: "Atividades culturais, meetups, shows, rolês, feiras de rua, aquele filme no Mario Quintana... Um feed para quem quer explorar a cidade e não perder o que já conhece"
+meta_title: "Alegreme - Eventos e Cinema em Porto Alegre"
+meta_description: "Eventos, shows, festas, atividades culturais, meetups, rolês, feiras de rua, aquele filme no Mario Quintana... Um feed para quem quer explorar a cidade e não perder o que já conhece"
 meta_image: "media/images/welcome/social-banner.png"
 twitter_account: "@portoalegreme"
