--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -1,7 +1,7 @@
 ## https://www.nginx.com/resources/wiki/start/topics/examples/full/
 
-error_log                             $RAILS_ROOT/log/nginx.error.log crit;
-proxy_cache_path                      $RAILS_ROOT/cache/nginx-rails levels=1:2 keys_zone=rails_cache:10m max_size=10g use_temp_path=off inactive=60m;
+ error_log                             $RAILS_ROOT/log/nginx.error.log crit;
+ proxy_cache_path                      $RAILS_ROOT/cache/nginx-rails levels=1:2 keys_zone=rails_cache:10m max_size=10g use_temp_path=off inactive=60m;
 
 upstream rails_app {
     server                             app:3000;
@@ -42,7 +42,7 @@ server {
         break;
     }
     location / {
-        return                         301 https://www.alegreme.com$request_uri;
+        return                         301 https://alegreme.com$request_uri;
     }
     location @rails {
         proxy_no_cache                 $cookie_remember_user_token;
@@ -60,8 +60,13 @@ server {
     }
 }
 server {
+    listen                             443 ssl http2;
+    server_name                        www.alegreme.com;
+    return                             301 https://alegreme.com$request_uri;
+}
+server {
     listen                             443 ssl http2 default_server;
-    server_name                        alegreme.com www.alegreme.com;
+    server_name                        alegreme.com;
     server_tokens                      off;
     ssl_certificate                    /etc/letsencrypt/live/alegreme.com/fullchain.pem;
     ssl_certificate_key                /etc/letsencrypt/live/alegreme.com/privkey.pem;
