--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -41,7 +41,7 @@ services:
       API_URL: http://api
       ELASTICSEARCH_URL: http://search:9200
       IS_DOCKER: 'true'
-      HTTP_HOST: 'www.alegreme.com'
+      HTTP_HOST: 'alegreme.com'
       NODE_ENV: test
     links:
       # - api
