Adjust nginx to 301 redirect .com.br

--- a/web/docker/web/nginx.conf
+++ b/web/docker/web/nginx.conf
@@ -11,7 +11,7 @@ upstream ml_api {
 }
 server {
     listen                             80;
-    server_name                        alegreme.com www.alegreme.com;
+    server_name                        alegreme.com www.alegreme.com alegreme.com.br www.alegreme.com.br;
     reset_timedout_connection          on;
     client_body_timeout                10;
     send_timeout                       10;
@@ -61,7 +61,7 @@ server {
 }
 server {
     listen                             443 ssl http2;
-    server_name                        www.alegreme.com;
+    server_name                        www.alegreme.com alegreme.com.br www.alegreme.com.br;
     return                             301 https://alegreme.com$request_uri;
 }
 server {
