--- a/scrapy/requirements.txt
+++ b/scrapy/requirements.txt
@@ -1,9 +1,61 @@
-scrapy
-scrapy-splash
-dateparser
-scrapy-useragents
-scrapy_proxy_pool
-extruct
-requests
-unidecode
-tldextract
+attrs==21.2.0
+Automat==20.2.0
+beautifulsoup4==4.9.3
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+constantly==15.1.0
+cryptography==3.4.7
+cssselect==1.1.0
+dateparser==1.0.0
+extruct==0.12.0
+filelock==3.3.0
+h2==3.2.0
+hpack==3.0.0
+html-text==0.5.2
+html5lib==1.1
+hyperframe==5.2.0
+hyperlink==21.0.0
+idna==2.10
+incremental==21.3.0
+isodate==0.6.0
+itemadapter==0.2.0
+itemloaders==1.0.4
+jmespath==0.10.0
+jstyleson==0.0.2
+lxml==4.6.3
+mf2py==1.1.2
+parsel==1.6.0
+priority==1.3.0
+Protego==0.1.16
+proxyscrape==0.3.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyDispatcher==2.0.5
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyRdfa3==3.5.3
+python-dateutil==2.8.1
+pytz==2021.1
+queuelib==1.6.1
+rdflib==5.0.0
+rdflib-jsonld==0.5.0
+regex==2021.4.4
+requests==2.25.1
+requests-file==1.5.1
+Scrapy==2.5.0
+scrapy-proxy-pool==0.1.9
+scrapy-splash==0.7.2
+Scrapy-UserAgents==0.0.1
+service-identity==21.1.0
+six==1.16.0
+soupsieve==2.2.1
+tldextract==3.1.2
+Twisted==21.2.0
+tzlocal==2.1
+Unidecode==1.3.2
+urllib3==1.26.5
+w3lib==1.22.0
+webencodings==0.5.1
+zope.interface==5.4.0
